--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fantasy_stocks",
   "version": "1.0.0",
-  "description": "",
+  "description": "### Database setup:",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,5 +20,6 @@
   "dependencies": {
     "axios": "^1.1.3",
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {}
 }
