--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "setup_sql": "bash create_db.sh $POSTGRES_USER"
+    "setup_sql": "bash create_db.sh $POSTGRES_USER",
+    "devStart": "nodemon app/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,13 @@
   "homepage": "https://github.com/gustavwogen/fantasy_stocks#readme",
   "dependencies": {
     "axios": "^1.1.3",
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "pg": "^8.8.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
