--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "setup_sql": "bash create_db.sh $POSTGRES_USER",
-    "devStart": "nodemon app/server.js"
+    "devStart": "nodemon app/server.js",
+    "start": "bash setup.sh"
   },
   "repository": {
     "type": "git",
