--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "setup_sql": "bash create_db.sh $POSTGRES_USER",
-    "devStart": "nodemon app/server.js",
+    "devStart": "cd app && nodemon server.js",
     "start": "bash setup.sh"
   },
   "repository": {
@@ -25,7 +25,8 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
