--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "setup_sql": "bash create_db.sh $POSTGRES_USER",
+    "setup_sql": "bash create_db.sh",
     "devStart": "cd app && nodemon server.js",
-    "start": "bash setup.sh"
+    "start": "cd app && node server.js"
   },
   "repository": {
     "type": "git",
