--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
